--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -86,7 +86,7 @@
                     <!-- single room -->
                     <div class = "showrooms">
                         <h3>Silver Room</h3>
-                        <p>Healthy and yummy treats for all types of furry friends. All medicine and caretaking happens in this room for our special pets. The toilets are kept tidy and clean for the lovely pets, as well as the fish tank.</p>
+                        <p>Healthy and yummy treats for all types of furry friends! All medicine and caretaking happens in this room for our special pets. The toilets are kept tidy and clean for the lovely pets, as well as the fish tank.</p>
                         <div class = "rating">
                             <span><i class = "fas fa-star"></i></span>
                             <span><i class = "fas fa-star"></i></span>
