--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -1,1 +1,23 @@
 <-- About Us -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>BestMate Paradise Hotel</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="main.css">
+        <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+        <link rel = "stylesheet" href = "style.css">
+    </head>
+  
+<body>
+  <div class="about">
+    <div class="inner-container">
+      <h1>About Us</h1>
+      <p class="text">
+          BestMate Paradise Hotel has been around for 10 years, our mission is to provide a home for all pets that are left lonely when the owners want to go on a trip away from home. We aim to protect, love and caretake for the pets. We make sure all pets have the best health care physically and mentally. We make sure all pets come home in full care, happy and healthy. The hotel provides lots of fun for the pets, having various play areas. The toilets and food areas are kept clean by our caretakers as well.
+      </p>
+      <div class="skills">
+        <span>Web Design</span>
+        <span>Photoshop & Illustrator</span>
+        <span>Coding</span>
