--- a/hotel-gp-single-page-site-master/about.html
+++ b/hotel-gp-single-page-site-master/about.html
@@ -19,5 +19,14 @@
       </p>
       <div class="skills">
         <span>Web Design</span>
+        <p class="text">
+          Alisha Anusha Raphael Wilson Ahmad
+        </p>
         <span>Photoshop & Illustrator</span>
+        <p class="text">
+          Alisha Anusha Raphael Wilson Ahmad
+        </p> 
         <span>Coding</span>
+         <p class="text">
+          Alisha Anusha Raphael Wilson Ahmad
+        </p>
