tried to connect booking with confirmation

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -53,7 +53,10 @@
                     <form>
                     <form action="./confirmation.html">
                     <input type="submit" class = "btn" value="BOOK NOW" />
-                    
+                    <form action="./confirmation.html">
+                        <input type="submit" class = "btn" value="BOOK NOW" />
+                    </form>
+                        
                 </form>
                 </div>
             </form>
