tried to change to button

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -54,7 +54,7 @@
                     <form action="./confirmation.html">
                     <form action="./confirmation.html">
                         <input type="submit" class = "btn" value="BOOK NOW" />
-                        <div id="btn"><a href="confirmation.html">Log In</a></div>
+                        <div id="btn"><a href="confirmation.html"> <button>BOOK NOW</button> </a></div>
                     </form>
                         
                 </form>
