--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -51,13 +51,9 @@
                 </div>
                 <div class = "form-item">
                     <form>
-                    <form action="./confirmation.html">
-                    <form action="./confirmation.html">
                         <input type="submit" class = "btn" value="BOOK NOW" />
-                        <div id="btn"><a href="confirmation.html"> <button>BOOK NOW</button> </a></div>
+                        <div id="btn"><a href="confirmation.html">BOOK NOW</a></div>
                     </form>
-                        
-                </form>
                 </div>
             </form>
         </div>
