--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -51,7 +51,8 @@
                 </div>
                 <div class = "form-item">
                     <form>
-                        <div id="btn"><a href="confirmation.html"><input type="submit" class = "btn" value="BOOK NOW" /></a></div>
+                        <input type="submit" class = "btn" value="BOOK NOW" />
+                        <div id="btn"><a href="confirmation.html"></a></div>
                     </form>
                 </div>
             </form>
