--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -6,3 +6,7 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/logo.png" type = "image/png">
 </head>
+
+<p>Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Australia.</p>
+ 
+<p>Some species live in houses where they hunt insects attracted by artificial light.</p>
