added another faq test

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -51,6 +51,15 @@
                     </div>
                 </article>
                 <!-- End of FAQ4 -->
+             
+              <!-- FAQ 4 -->
+                <article class = "service">
+                    <div class = "service-content">
+                        <h2>How do I submit a complaint?</h2>
+                        <p>We accept complaints through email and over the phone, where you will be redirected to the hotel manager. Head over to our contact us page for further information regarding reaching out to us.</p>
+                    </div>
+                </article>
+                <!-- End of FAQ4 -->
            
             </div>
         </section>
