--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -7,6 +7,23 @@
         <link rel = "icon" href = "images/logo.png" type = "image/png">
 </head>
 
+<!-- Side Navbar -->
+        <div class = "sidenav" id = "sidenav">
+            <span class = "cancel-btn" id = "cancel-btn">
+                <i class = "fas fa-times"></i>
+            </span>
+
+            <ul class = "navbar">
+                <li><a href = "#header">Home</a></li>
+                <li><a href = "#Services">Services</a></li>
+                <li><a href = "#rooms">Rooms</a></li>
+                <li><a href = "#customers">Customers</a></li>
+            </ul>
+            <button class = "btn sign-up">sign up</button>
+            <button class = "btn log-in">log in</button>
+        </div>
+<!-- End of Side Navbar -->
+
 <!-- FAQ -->
         <section class = "services sec-width" id = "Services">
             <div class = "title">
