added useful links

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -287,16 +287,17 @@
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <p>BestParadise Hotel</p>
+                    <a href = "#header">About Us</a>
                 </div>
 
                 <div>
                     <h2>Useful Links</h2>
+                    <a href = "#">Home</a>
                     <a href = "#">Create an account</a>
                     <a href = "#">Booking Page</a>
                     <a href = "#header">About Us</a>
                     <a href = "#">FAQ</a>
-
+                    <a href = "#">Privacy Policy</a>
                 </div>
 
                 <div>
