added options to nav bar

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -42,12 +42,15 @@
 
             <ul class = "navbar">
                 <li><a href = "#header">Home</a></li>
-                <li><a href = "#Services">Services</a></li>
+                <li><a href = "#about">About Us</a></li>
+                <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
                 <li><a href = "#customers">Customers</a></li>
+                <li><a href = "#privacy">Privacy Policy</a></li>
+                <li><a href = "#faq">FAQ</a></li>
             </ul>
-            <button class = "btn sign-up">sign up</button>
-            <button class = "btn log-in">log in</button>
+            <button class = "btn sign-up">SIGN UP</button>
+            <button class = "btn log-in">LOG IN</button>
         </div>
         <!-- End of Side Navbar -->
 
