added contact us bit in sidebar and footer

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -48,6 +48,7 @@
                 <li><a href = "#customers">Customers</a></li>
                 <li><a href = "#privacy">Privacy Policy</a></li>
                 <li><a href = "#faq">FAQ</a></li>
+                <li><a href = "#contact">Contact Us</a></li>
             </ul>
             <button class = "btn sign-up">SIGN UP</button>
             <button class = "btn log-in">LOG IN</button>
@@ -301,6 +302,7 @@
                     <a href = "#header">About Us</a>
                     <a href = "#">FAQ</a>
                     <a href = "#">Privacy Policy</a>
+                    <a href = "#">Contact Us</a>
                 </div>
 
                 <div>
