tried to link faq html in footer

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -300,7 +300,7 @@
                     <a href = "#">Create an account</a>
                     <a href = "#">Booking Page</a>
                     <a href = "#header">About Us</a>
-                    <a href = "#">FAQ</a>
+                    <a href = "FAQ.html">FAQ</a>
                     <a href = "#">Privacy Policy</a>
                     <a href = "#">Contact Us</a>
                 </div>
