--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -297,12 +297,12 @@
                 <div>
                     <h2>Useful Links</h2>
                     <a href = "#">Home</a>
-                    <a href = "#">Create an account</a>
-                    <a href = "#">Booking Page</a>
-                    <a href = "#header">About Us</a>
+                    <a href = "signup.html">Create an account</a>
+                    <a href = "booking.html">Booking Page</a>
+                    <a href = "about.html">About Us</a>
                     <a href = "FAQ.html">FAQ</a>
-                    <a href = "#">Privacy Policy</a>
-                    <a href = "#">Contact Us</a>
+                    <a href = "privacy.html">Privacy Policy</a>
+                    <a href = "contact.html">Contact Us</a>
                 </div>
 
                 <div>
