linked in sidebar

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -41,14 +41,14 @@
             </span>
 
             <ul class = "navbar">
-                <li><a href = "#header">Home</a></li>
-                <li><a href = "#about">About Us</a></li>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "about.html">About Us</a></li>
                 <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
                 <li><a href = "#customers">Customers</a></li>
-                <li><a href = "#privacy">Privacy Policy</a></li>
-                <li><a href = "#faq">FAQ</a></li>
-                <li><a href = "#contact">Contact Us</a></li>
+                <li><a href = "privacy.html">Privacy Policy</a></li>
+                <li><a href = "FAQ.html">FAQ</a></li>
+                <li><a href = "contact.html">Contact Us</a></li>
             </ul>
             <button class = "btn sign-up">SIGN UP</button>
             <button class = "btn log-in">LOG IN</button>
@@ -296,7 +296,7 @@
 
                 <div>
                     <h2>Useful Links</h2>
-                    <a href = "#">Home</a>
+                    <a href = "index.html">Home</a>
                     <a href = "signup.html">Create an account</a>
                     <a href = "booking.html">Booking Page</a>
                     <a href = "about.html">About Us</a>
