--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -92,21 +92,23 @@
         </section>
         <!-- End of FAQ -->
 
-  <!-- Footer -->
+   <!-- Footer -->
         <footer class = "footer">
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <p>BestParadise Hotel</p>
+                    <a href = "#header">About Us</a>
                 </div>
 
                 <div>
                     <h2>Useful Links</h2>
-                    <a href = "#">Create an account</a>
-                    <a href = "#">Booking Page</a>
-                    <a href = "#header">About Us</a>
-                    <a href = "#">FAQ</a>
-
+                    <a href = "index.html">Home</a>
+                    <a href = "signup.html">Create an account</a>
+                    <a href = "booking.html">Booking Page</a>
+                    <a href = "about.html">About Us</a>
+                    <a href = "FAQ.html">FAQ</a>
+                    <a href = "privacy.html">Privacy Policy</a>
+                    <a href = "contact.html">Contact Us</a>
                 </div>
 
                 <div>
