--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -45,6 +45,7 @@
                 <li><a href = "about.html">About Us</a></li>
                 <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
+                <li><a href = "booking.html">Booking Page</a></li>
                 <li><a href = "#customers">Customers</a></li>
                 <li><a href = "privacy.html">Privacy Policy</a></li>
                 <li><a href = "FAQ.html">FAQ</a></li>
