--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -8,7 +8,6 @@
         <link rel = "icon" href = "images/logo.png" type = "image/png">
     </head>
   
-     <-- Adds a message to notify the user that their booking was successful -->
   <head>
         <meta charset="utf-8">
         <title>BESTMATE PARADISE HOTEL</title>
@@ -17,6 +16,24 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/logo.png" type = "image/png">
     </head>
+  
+     <!-- End of Confirmation  -->
+    <section class = "services sec-width" id = "Services">
+            <div class = "title">
+                <h2>Confirmation</h2>
+            </div>
+            <div class = "services-container">
+                <!-- Confirmation Message -->
+                <article class = "service">
+                    <div class = "service-content">
+                        <h2>====== THANK YOU FOR YOUR BOOKING ======</h2>
+                        <p>We hope to see you soon !!</p>
+                    </div>
+                </article>
+                <!-- End of Confirmation Message -->
+              /div>
+        </section>
+     <!-- End of Confirmation  -->
   
      <!-- Footer -->
         <footer class = "footer">
