--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -31,7 +31,7 @@
                     </div>
                 </article>
                 <!-- End of Confirmation Message -->
-              /div>
+              </div>
         </section>
      <!-- End of Confirmation  -->
   
