--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -1,4 +1,3 @@
-<-- Adds a message to notify the user that their booking was successful -->
   <head>
         <meta charset="utf-8">
         <title>BESTMATE PARADISE HOTEL</title>
@@ -26,7 +25,7 @@
                 <!-- Confirmation Message -->
                 <article class = "service">
                     <div class = "service-content">
-                        <h2>====== THANK YOU FOR YOUR BOOKING ======</h2>
+                        <h2>THANK YOU FOR YOUR BOOKING</h2>
                         <p>We hope to see you soon !!</p>
                     </div>
                 </article>
