attempted to link button to confirmation

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -50,9 +50,8 @@
                     <input type = "number" min = "1" value = "1" id = "rooms">
                 </div>
                 <div class = "form-item">
-                    <form>
-                        <input type="submit" class = "btn" value="BOOK NOW" />
-                        <div id="btn"><a href="confirmation.html"></a></div>
+                    <form action="confirmation.html">
+                        <button type="submit" value="BOOK NOW" />
                     </form>
                 </div>
             </form>
