--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -50,7 +50,7 @@
                     <input type = "number" min = "1" value = "1" id = "rooms">
                 </div>
                 <div class = "form-item">
-                    <input type="button" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
+                    <input type="btn" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
                 </div>
             </form>
         </div>
