linked book button to confirmation.html
the button is kind of not in line so if someone could format would be gr8

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -50,7 +50,7 @@
                     <input type = "number" min = "1" value = "1" id = "rooms">
                 </div>
                 <div class = "form-item">
-                    <input type="btn" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
+                    <input type="button" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
                 </div>
             </form>
         </div>
@@ -171,3 +171,4 @@
         </footer>
         <!-- End of footer -->
             </body>
+
