--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -31,6 +31,15 @@
                     <input type="submit" class = "head-btn" value="LET'S BOOK" />
                 </form>
             </div>
+            
+            <! -- Add Video Here -->
+            <video width="320" height="240" controls>
+                <source src="movie.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+            </video>
+            <! -- End Video Here -->
+            
         </header>
         <!-- End of Header -->
 
