--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -33,11 +33,13 @@
             </div>
             
             <! -- Add Video Here -->
-            <video width="320" height="240" controls>
-                <source src="movie.mp4" type="video/mp4">
-                <source src="movie.ogg" type="video/ogg">
-                Your browser does not support the video tag.
-            </video>
+            <center>
+                 <video width="320" height="240" controls>
+                    <source src="movie.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+            </center>
             <! -- End Video Here -->
             
         </header>
