Atttempting to add fixed header banner

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -9,7 +9,13 @@
         <link rel = "icon" href = "images/logo.png" type = "image/png">
     </head>
     <body>
-        
+        <!-- FIXED HEADER FOR PAGE -->
+        <div class="navbar">
+          <a href="./index.html">Home</a>
+          
+        </div>
+        <!-- END OF FIXED HEADER -->
+
         <section class = "booking sec-width" id = "Booking">
             <div class = "title">
                 <h2>services</h2>
