--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <!-- FIXED HEADER FOR PAGE -->
-        <div class="navbar">
+        <div class="navbar_fixed">
           <a href="./index.html">Home</a>
           
         </div>
