--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -12,7 +12,12 @@
         <!-- FIXED HEADER FOR PAGE -->
         <div class="navbar_fixed">
           <a href="./index.html">Home</a>
-          
+          <a href="./faq.html">FAQ</a>
+          <a href="./contact.html">Contact Us</a>
+          <a href="./booking.html">Booking</a>
+          <a href="./about.html">About Us</a>
+          <a href="./signup.html">Create an Account</a>
+            <a href="./privacy.html">Privacy Policy</a>
         </div>
         <!-- END OF FIXED HEADER -->
 
