Some additional booking options

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -55,6 +55,52 @@
                     <label for = "rooms">Rooms: </label>
                     <input type = "number" min = "1" value = "1" id = "rooms">
                 </div>
+            </form>
+        </div>
+
+        <div class = "book">
+            <form class = "book-form">
+                <div class = "form-item">
+                    <label for = "Diet">Pet's Dietary Requirements:</label>
+                    <select name="select" id="#">
+                        <option value="1">None</option>
+                        <option value="2">Vegan</option>
+                        <option value="3">Vegetarian</option>
+                        <option value="4">Omnivorous</option>
+                        <option value="5">Strictly carnivorous</option>
+                    </select>
+                </div>
+                <div class = "form-item">
+                    <label for = "Exercise">Pet's Exercise Needs: </label>
+                    <select name="select" id="#">
+                        <option value="One walk per day">One walk per day</option>
+                        <option value="Two walks per day">Two walks per day</option>
+                        <option value="Olympic marathon every day">Olympic marathon everyday</option>
+                        <option value="50m Olympic Pool Visit Daily">50m Olympic Pool Visit Daily (Fish Only)</option>
+                        <option value="No exercise required">No exercise required</option>
+                    </select>
+                </div>
+                
+                <div class = "form-item">
+                    <label for = "Affection">Pet's Physical Affection Needs: </label>
+                    <select name="select" id="#">
+                        <option value="No affection needed">No affection needed</option>
+                        <option value="Requires some company (1-2 hours per day)">Requires some company (1-2 hours per day)</option>
+                        <option value="Two patting sessions per day">Two patting sessions per day</option>
+                        <option value="Constant human company required (24/7)">Constant human company required (24/7)</option>
+                        <option value="Constant 24/7 Cuddles and Pats, Carer always within 1m radius of pet">Constant 24/7 Cuddles and Pats, Carer always within 1m radius of pet</option>
+                    </select>
+                </div>
+
+                <div class = "form-item">
+                    <label for = "AddOns">Additional Add-Ons for your Pet (Hold command to select multiple)</label>
+                        <select name="select" multiple id="#">
+                            <option value="Spa treatment">Spa treatment</option>
+                            <option value="Daily toy playtime with carer">Daily toy playtime with carer</option>
+                            <option value="Bubble bath">Bubble bath</option>
+                            <option value="Bedtime story">Bedtime story</option>
+                            <option value="Daily videoconference with owner">Daily videoconference with owner</option>
+                </div>
                 <div class = "form-item">
                     <input type="button" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
                 </div>
