--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -7,6 +7,16 @@
         <link rel = "icon" href = "images/logo.png" type = "image/png">
 </head>
 
+       <div class="navbar_fixed">
+          <a href="./index.html">Home</a>
+          <a href="./faq.html">FAQ</a>
+          <a href="./contact.html">Contact Us</a>
+          <a href="./booking.html">Booking</a>
+          <a href="./about.html">About Us</a>
+          <a href="./signup.html">Create an Account</a>
+            <a href="./privacy.html">Privacy Policy</a>
+        </div>
+
 <!-- FAQ -->
         <section class = "services sec-width" id = "Services">
             <div class = "title">
