--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
         <link rel = "icon" href = "images/logo.png" type = "image/png">
 </head>
-
+     <header>
        <div class="navbar_fixed">
           <a href="./index.html">Home</a>
           <a href="./faq.html">FAQ</a>
@@ -16,7 +16,7 @@
           <a href="./signup.html">Create an Account</a>
             <a href="./privacy.html">Privacy Policy</a>
         </div>
-
+    </header>
 <!-- FAQ -->
         <section class = "services sec-width" id = "Services">
             <div class = "title">
