--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -18,6 +18,7 @@
         </div>
     </header>
 <!-- FAQ -->
+    <body>
         <section class = "services sec-width" id = "Services">
             <div class = "title">
                 <h2>FAQ</h2>
@@ -99,6 +100,7 @@
                 <!-- End of FAQ8 -->
             </div>
         </section>
+</body>
         <!-- End of FAQ -->
 
    <!-- Footer -->
