--- a/hotel-gp-single-page-site-master/contact.html
+++ b/hotel-gp-single-page-site-master/contact.html
@@ -1,1 +1,59 @@
 
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+        <footer class = "footer">
+            <div class = "footer-container">
+                <div>
+                    <h2>About Us </h2>
+                    <a href = "#header">About Us</a>
+                </div>
+
+                <div>
+                    <h2>Useful Links</h2>
+                    <a href = "index.html">Home</a>
+                    <a href = "signup.html">Create an account</a>
+                    <a href = "booking.html">Booking Page</a>
+                    <a href = "about.html">About Us</a>
+                    <a href = "FAQ.html">FAQ</a>
+                    <a href = "privacy.html">Privacy Policy</a>
+                    <a href = "contact.html">Contact Us</a>
+                </div>
+
+                <div>
+                    <h2>Contact Us</h2>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-map-marker-alt"></i>
+                        </span>
+                        <span>
+                            The University of Sydney, NSW 2006, Australia
+                        </span>
+                    </div>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-phone-alt"></i>
+                        </span>
+                        <span>
+                            +61 2 9351 2222
+                        </span>
+                    </div>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-envelope"></i>
+                        </span>
+                        <span>
+                            info.bestparadisehotel@sydney.edu.au
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- End of footer -->
