added required label

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -28,11 +28,11 @@
             <form class = "book-form">
                 <div class = "form-item">
                     <label for = "checkin-date">Check In Date: </label>
-                    <input type = "date" id = "chekin-date">
+                    <input type = "date" id = "chekin-date" required>
                 </div>
                 <div class = "form-item">
                     <label for = "checkout-date">Check Out Date: </label>
-                    <input type = "date" id = "chekout-date">
+                    <input type = "date" id = "chekout-date" required>
                 </div>
                 <div class = "form-item">
                     <label for = "Room Type">Room Type:</label>
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class = "form-item">
-                    <label for = "AddOns">Additional Add-Ons for your Pet (Hold command to select multiple)</label>
+                    <label for = "AddOns">Additional Add-Ons for your Pet (Hold command/ctrl to select multiple)</label>
                         <select name="select" multiple id="#">
                             <option value="Spa treatment">Spa treatment</option>
                             <option value="Daily toy playtime with carer">Daily toy playtime with carer</option>
