tried to add nav bar

--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -18,7 +18,9 @@
                 </div>
             </div>
    </header>
-
+<!-- Display Type -->
+        <div id = "modal"></div>
+<!-- End of Display Type -->
 <!-- Side Navbar -->
         <div class = "sidenav" id = "sidenav">
             <span class = "cancel-btn" id = "cancel-btn">
