--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -56,6 +56,11 @@
                 <li><a href = "about.html">About Us</a></li>
                 <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
+                <ul>
+                        <li><a href="#">Gold Membership Room</a></li>
+                        <li><a href="#">Silver Membership Room</a></li>
+                        <li><a href="#">Bronze Membership Room</a></li>
+                    </ul>
                 <li><a href = "booking.html">Booking Page</a></li>
                 <li><a href = "#customers">Customers</a></li>
                 <li><a href = "privacy.html">Privacy Policy</a></li>
