--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -56,7 +56,7 @@
                 <li><a href = "about.html">About Us</a></li>
                 <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
-                <ul>
+                    <ul class = "sub-nav">
                         <li><a href="#">Gold Membership Room</a></li>
                         <li><a href="#">Silver Membership Room</a></li>
                         <li><a href="#">Bronze Membership Room</a></li>
