connected the sub nav bars to respective htmls

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -57,9 +57,9 @@
                 <li><a href = "#services">Services</a></li>
                 <li><a href = "#rooms">Rooms</a></li>
                     <ul class = "sub-nav">
-                        <li><a href="#">Gold Membership Room</a></li>
-                        <li><a href="#">Silver Membership Room</a></li>
-                        <li><a href="#">Bronze Membership Room</a></li>
+                        <li><a href="goldroom.html">Gold Membership Room</a></li>
+                        <li><a href="silverroom.html">Silver Membership Room</a></li>
+                        <li><a href="bronzeroom.html">Bronze Membership Room</a></li>
                     </ul>
                 <li><a href = "booking.html">Booking Page</a></li>
                 <li><a href = "#customers">Customers</a></li>
