--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -1,1 +1,161 @@
+<html>
+<head>
+        <meta charset="utf-8">
+        <title>BestMate Paradise Hotel</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="main.css">
+        <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+        <link rel = "icon" href = "images/logo.png" type = "image/png">
+    </head>
 
+        <!-- Rooms -->
+        <section class = "rooms sec-width" id = "rooms">
+            <div class = "title">
+                <h2>pet houses</h2>
+            </div>
+            <div class = "rooms-container">
+                <!-- single room -->
+                <article class = "room">
+                    <div class = "room-image">
+                        <img src = "images/img1.jpg" alt = "room image">
+                    </div>
+                    <div class = "room-text">
+                        <h3>Gold Membership Rooms</h3>
+                        <ul>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Spa and pool for the pets.
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                The best play equiptment
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Best gourmey healthy food and drinks, with some snakcs!.
+                            </li>
+                        </ul>
+                        <p> Your pet will be given baths, taken cared by the sweetest and friendliest pet lovers. We will help them feel safe and welcomed with lux toys and food!</p>
+                        <p> This class contains lux sleeping areas, quiet and play areas, with an outdoor that contains a pool. The toilets are well maintained as well.</p>
+                        <p class = "rate">
+                            <span>$20.00 /</span> Per Night
+                        </p>
+                        <button type = "button" class = "btn">book now</button>
+                    </div>
+                </article>
+                <!-- end of single room -->
+                
+                <!-- single room -->
+                <article class = "room">
+                    <div class = "room-image">
+                        <img src = "images/img2.jpg" alt = "room image">
+                    </div>
+                    <div class = "room-text">
+                        <h3>Silver Membership Rooms</h3>
+                        <ul>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Amazing treats and food.
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Outdoor equiptment and playground.
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Lovely pet lovers will take care of your pet.
+                            </li>
+                        </ul>
+                        <p> Need a loving and friendly enviornment for your pet? This room has lots of play areas, loving pet care takers, with some yummy treats and clean bathrooms.</p>
+                        <p> This room gives the pets some fresh air and still some quiet time, in the quiet spaces for the sleepy pets. All food is healthy and the sleeping spaces are comfortable.</p>
+                        <p class = "rate">
+                            <span>$15.00 /</span> Per Night
+                        </p>
+                        <button type = "button" class = "btn">book now</button>
+                    </div>
+                </article>
+                <!-- end of single room -->
+                <!-- single room -->
+                <article class = "room">
+                    <div class = "room-image">
+                        <img src = "images/img3.jpg" alt = "room image">
+                    </div>
+                    <div class = "room-text">
+                        <h3>Bronze Membership Rooms</h3>
+                        <ul>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Space for the pets to play.
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Yummy treats and healthy food.
+                            </li>
+                            <li>
+                                <i class = "fa-light fa-arrow-right-from-arc"></i>
+                                Quiet sleeping spaces for your pets.
+                            </li>
+                        </ul>
+                        <p> Your pet can make some furry friends when playing in the play area with the new and fun funky equiptment, or your pet can have a sleep in the quiet area. Also there is healthy food night and morning provided. </p>
+                        <p> The quiet area has fluffy sleeping areas to keep your pet comfortable. The pet care takers are friendly and will keep your pet safe and protected. There will a new addition, using video games for the pets to play!</p>
+                        <p class = "rate">
+                            <span>$10.00 /</span> Per Night
+                        </p>
+                        <button type = "button" class = "btn">book now</button>
+                    </div>
+                </article>
+                <!-- end of single room -->
+            </div>
+        </section>
+        <!-- End of Rooms -->
+   <!-- Footer -->
+        <footer class = "footer">
+            <div class = "footer-container">
+                <div>
+                    <h2>About Us </h2>
+                    <a href = "#header">About Us</a>
+                </div>
+
+                <div>
+                    <h2>Useful Links</h2>
+                    <a href = "index.html">Home</a>
+                    <a href = "signup.html">Create an account</a>
+                    <a href = "booking.html">Booking Page</a>
+                    <a href = "about.html">About Us</a>
+                    <a href = "FAQ.html">FAQ</a>
+                    <a href = "privacy.html">Privacy Policy</a>
+                    <a href = "contact.html">Contact Us</a>
+                </div>
+
+                <div>
+                    <h2>Contact Us</h2>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-map-marker-alt"></i>
+                        </span>
+                        <span>
+                            The University of Sydney, NSW 2006, Australia
+                        </span>
+                    </div>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-phone-alt"></i>
+                        </span>
+                        <span>
+                            +61 2 9351 2222
+                        </span>
+                    </div>
+                    <div class = "contact-item">
+                        <span>
+                            <i class = "fas fa-envelope"></i>
+                        </span>
+                        <span>
+                            info.bestparadisehotel@sydney.edu.au
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- End of footer -->
+  
+</html>
