--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -55,7 +55,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "about.html">About Us</a></li>
                 <li><a href = "#services">Services</a></li>
-                <li><a href = "#rooms">Rooms</a></li>
+                <li><a href = "rooms.html">Rooms</a></li>
                     <ul class = "sub-nav">
                         <li><a href="goldroom.html">Gold Membership Room</a></li>
                         <li><a href="silverroom.html">Silver Membership Room</a></li>
