changed button names

--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -40,7 +40,7 @@
                         <p class = "rate">
                             <span>$20.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">book now</button>
+                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
                     </div>
                 </article>
                 <!-- end of single room -->
@@ -71,7 +71,7 @@
                         <p class = "rate">
                             <span>$15.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">book now</button>
+                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
                     </div>
                 </article>
                 <!-- end of single room -->
@@ -101,7 +101,7 @@
                         <p class = "rate">
                             <span>$10.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">book now</button>
+                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
                     </div>
                 </article>
                 <!-- end of single room -->
