tried to link checkout button to silver room

--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -71,7 +71,10 @@
                         <p class = "rate">
                             <span>$15.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
+                        <!--<button type = "button" class = "btn">CHECK OUT NOW!</button> -->
+                        <form action="./silverroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        </form>
                     </div>
                 </article>
                 <!-- end of single room -->
