linked check out buttons to their respective rooms

--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -40,7 +40,9 @@
                         <p class = "rate">
                             <span>$20.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
+                        <form action="./goldroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        </form>
                     </div>
                 </article>
                 <!-- end of single room -->
@@ -71,7 +73,6 @@
                         <p class = "rate">
                             <span>$15.00 /</span> Per Night
                         </p>
-                        <!--<button type = "button" class = "btn">CHECK OUT NOW!</button> -->
                         <form action="./silverroom.html">
                                 <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
                         </form>
@@ -104,7 +105,9 @@
                         <p class = "rate">
                             <span>$10.00 /</span> Per Night
                         </p>
-                        <button type = "button" class = "btn">CHECK OUT NOW!</button>
+                        <form action="./bronzeroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        </form>
                     </div>
                 </article>
                 <!-- end of single room -->
