--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -105,8 +105,8 @@
                         <p class = "rate">
                             <span>$10.00 /</span> Per Night
                         </p>
-                        <form action="./bronzeroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        <form action="bronzeroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
                         </form>
                     </div>
                 </article>
