--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -40,8 +40,8 @@
                         <p class = "rate">
                             <span>$20.00 /</span> Per Night
                         </p>
-                        <form action="./goldroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        <form action="goldroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
                         </form>
                     </div>
                 </article>
@@ -73,8 +73,8 @@
                         <p class = "rate">
                             <span>$15.00 /</span> Per Night
                         </p>
-                        <form action="./silverroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!"/>
+                        <form action="silverroom.html">
+                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
                         </form>
                     </div>
                 </article>
