--- a/hotel-gp-single-page-site-master/FAQ.html
+++ b/hotel-gp-single-page-site-master/FAQ.html
@@ -1,4 +1,5 @@
- <head>
+ <html>
+<head>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -141,3 +142,4 @@
             </div>
         </footer>
         <!-- End of footer -->
+</html>
