--- a/hotel-gp-single-page-site-master/signin.html
+++ b/hotel-gp-single-page-site-master/signin.html
@@ -1,3 +1,4 @@
+<html>
 <head>
         <meta charset="utf-8">
         <title>BestMate Paradise Hotel</title>
@@ -56,3 +57,4 @@
             </div>
         </footer>
         <!-- End of footer -->
+</html>
