--- a/hotel-gp-single-page-site-master/confirmation.html
+++ b/hotel-gp-single-page-site-master/confirmation.html
@@ -39,7 +39,7 @@
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <a href = "#header">About Us</a>
+                    <a href = "about.html">About Us</a>
                 </div>
 
                 <div>
