--- a/hotel-gp-single-page-site-master/rooms.html
+++ b/hotel-gp-single-page-site-master/rooms.html
@@ -32,7 +32,7 @@
                             </li>
                             <li>
                                 <i class = "fa-light fa-arrow-right-from-arc"></i>
-                                Best gourmey healthy food and drinks, with some snakcs!.
+                                Best gourmet healthy food and drinks, with some snakcs!.
                             </li>
                         </ul>
                         <p> Your pet will be given baths, taken cared by the sweetest and friendliest pet lovers. We will help them feel safe and welcomed with lux toys and food!</p>
@@ -119,7 +119,7 @@
             <div class = "footer-container">
                 <div>
                     <h2>About Us </h2>
-                    <a href = "#header">About Us</a>
+                    <a href = "about.html">About Us</a>
                 </div>
 
                 <div>
