made booking button consistent

--- a/hotel-gp-single-page-site-master/booking.html
+++ b/hotel-gp-single-page-site-master/booking.html
@@ -103,9 +103,9 @@
                             <option value="Bedtime story">Bedtime story</option>
                             <option value="Daily videoconference with owner">Daily videoconference with owner</option>
                 </div>
-                <div class = "form-item">
-                    <input type="button" onclick="window.location.href = 'confirmation.html';" value="BOOK NOW"/>
-                </div>
+                <form action="./confirmation.html">
+                    <input type="submit" class = "head-btn" value="BOOK NOW!" />
+                </form>
             </form>
         </div>
             
