changed booking buttons for rooms to refer to booking

--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -174,8 +174,8 @@
                         <p class = "rate">
                             <span>$20.00 /</span> Per Night
                         </p>
-                        <form action="goldroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
+                        <form action="booking.html">
+                                <input type="submit" class = "head-btn" value="BOOK NOW!">
                         </form>
                     </div>
                 </article>
@@ -207,8 +207,8 @@
                         <p class = "rate">
                             <span>$15.00 /</span> Per Night
                         </p>
-                        <form action="silverroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
+                        <form action="booking.html">
+                                <input type="submit" class = "head-btn" value="BOOK NOW!">
                         </form>
                     </div>
                 </article>
@@ -239,8 +239,8 @@
                         <p class = "rate">
                             <span>$10.00 /</span> Per Night
                         </p>
-                        <form action="bronzeroom.html">
-                                <input type="submit" class = "head-btn" value="CHECK OUT NOW!">
+                        <form action="booking.html">
+                                <input type="submit" class = "head-btn" value="BOOK NOW!">
                         </form>
                     </div>
                 </article>
