--- a/hotel-gp-single-page-site-master/index.html
+++ b/hotel-gp-single-page-site-master/index.html
@@ -356,7 +356,7 @@
             </div>
         </footer>
         <!-- End of footer -->
-        <script src="script.js"></script>
+        <script src="nav-bar-action.js"></script>
    </body>
 </html>
 
